fix promptSuggestion spacing for less than 3 suggestions

--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -14,7 +14,6 @@ body {
   flex-direction: column; 
   max-width: 40em;
   margin: auto;
-  margin-bottom: calc();
   box-sizing: border-box;
 }
 
